apps/base/media/arr-dashboard/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: arr-dashboard
  labels:
    app: arr-dashboard
spec:
  selector:
    app: arr-dashboard
  ports:
    - name: http
      port: 80
      targetPort: 3000
