apps/base/media/arr-dashboard/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: arr-dashboard
  labels:
    app: arr-dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`arr-dashboard.${DOMAIN_EXTERNAL}`)
      kind: Rule
      services:
        - name: arr-dashboard
          port: http
  tls:
    secretName: ${CERT_SECRET_EXTERNAL}
